--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,6 @@ dependencies {
     compile 'com.android.support:support-v4:19.1.0'
     compile 'com.squareup.retrofit:retrofit:1.5.0'
     compile 'com.jakewharton:butterknife:4.0.1'
+    compile 'org.simpleframework:simple-xml:2.7.1'
     compile fileTree(dir: 'libs', include: ['*.jar'])
 }
