--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,10 +27,11 @@ dependencies {
     compile 'com.android.support:support-v4:19.1.0'
     compile 'com.squareup.retrofit:retrofit:1.5.0'
     compile 'com.jakewharton:butterknife:4.0.1'
+    compile 'com.google.code.gson:gson:2.2.4'
     compile ('org.simpleframework:simple-xml:2.7.1') {
         exclude module: 'stax'
         exclude module: 'stax-api'
-        exclude module: 'xpp3'  
+        exclude module: 'xpp3'
     }
     compile fileTree(dir: 'libs', include: ['*.jar'])
 }
