--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="co.createch.MetroRappid" >
-
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -10,6 +12,9 @@
         <activity
             android:name="co.createch.MetroRappid.MainActivity"
             android:label="@string/app_name" >
+        </activity>
+
+        <activity android:name=".ui.StopListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
