--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     }
 
     defaultConfig {
-        minSdkVersion 8
+        minSdkVersion 9
         targetSdkVersion 19
         versionCode 1
         versionName "1.0"
@@ -24,6 +24,7 @@ android {
 
 dependencies {
     compile 'com.android.support:appcompat-v7:19.1.0'
+    compile 'com.google.android.gms:play-services:4.3.23'
     compile 'com.android.support:support-v4:19.1.0'
     compile 'com.squareup.retrofit:retrofit:1.5.0'
     compile 'com.jakewharton:butterknife:4.0.1'
