--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:name="co.createch.MetroRappid.MetroRapidApp">
         <activity android:name="co.createch.MetroRappid.ui.StopListActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
