--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="co.createch.MetroRappid" >
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
     <application
+        android:name="co.createch.MetroRappid.MetroRapidApp"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
-        android:name="co.createch.MetroRappid.MetroRapidApp">
+        android:theme="@style/AppTheme" >
         <activity android:name="co.createch.MetroRappid.ui.StopListActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,11 +22,13 @@
             android:name="co.createch.MetroRappid.ui.RouteViewActivity"
             android:label="@string/title_activity_route_view" >
         </activity>
-        <meta-data android:name="com.google.android.gms.version"
+
+        <meta-data
+            android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
         <activity
-            android:name=".ui.RouteViewActivity"
+            android:name="co.createch.MetroRappid.ui.RouteViewActivity"
             android:label="@string/title_activity_route_view_activity" >
         </activity>
     </application>
