--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/TranslucentTheme" >
         <activity android:name="co.createch.MetroRappid.ui.StopListActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
