--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         android:name="co.createch.MetroRappid.MetroRapidApp"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
+        android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity android:name="co.createch.MetroRappid.ui.RouteViewActivity" >
             <intent-filter>
